# knowledge-storage-mcp-system

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  LICENSE  MERGE_STRATEGY.md  Makefile  README.md  ROADMAP.md  TEST_PLAN.md  analyze_diff.bat  backup_repos.sh  check_conflicts.sh  compare_files.py  create_consolidation_pr.sh  docker-compose.yml  execute_merge.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup_dev.py
.github/PULL_REQUEST_TEMPLATE/: merge_request.md
.github/workflows/: ci-cd.yml  security.yml  test.yml
docker/: Dockerfile
knowledge_storage_mcp/: __init__.py  server.py
knowledge_storage_mcp/api/: __init__.py  entities.py  queries.py  relationships.py
knowledge_storage_mcp/db/: __init__.py  connection.py  schema.py
knowledge_storage_mcp/utils/: __init__.py  logging.py
schemas/: entity_types.json  relationship_types.json
tests/: test_server.py
tools/: analyze_diff.bat  backup_repos.bat  check_conflicts.bat  compare_files.py  consolidation.bat  create_consolidation_pr.bat  execute_merge.bat  run_tests.bat
